src/test/ui/span/issue-36530.stderr
error[E0658]: custom inner attributes are unstable
  --> $DIR/issue-36530.rs:9:8
   |
LL |     #![foo]
   |        ^^^
   |
   = note: see issue #54726 <https://github.com/rust-lang/rust/issues/54726> for more information
   = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
